# kma-bank-analyzer

./: .gitignore  00-PROJECT-OVERVIEW.md  01-PHASE1-PYTHON-CLI.md  02-PHASE2-FASTAPI-DOCKER.md  03-PHASE3-N8N-ORCHESTRATION.md  04-PHASE4-DEPLOYMENT.md  05-DATA-STRUCTURES.md  06-CONFIGURATION-EXAMPLES.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.fish  run.sh
bank_analyzer/: __init__.py
bank_analyzer/aggregator/: __init__.py  aggregator.py
bank_analyzer/categorizer/: __init__.py  overrides.py  rule_engine.py
bank_analyzer/exporters/: __init__.py  excel_exporter.py  json_exporter.py
bank_analyzer/models/: __init__.py  transaction.py
bank_analyzer/parsers/: __init__.py  alior_parser.py  base_parser.py  detector.py  pko_parser.py
bank_analyzer/utils/: __init__.py  logger.py
cli/: __init__.py  main.py
config/: categories.example.yaml  rules.example.yaml
tests/: __init__.py  test_aggregator.py  test_categorizer.py  test_integration.py  test_parsers.py  test_transaction.py
tests/fixtures/: alior_sample.csv  pko_sample.csv
